“Added-four-blogs-to-March”

--- a/2022.md
+++ b/2022.md
@@ -7,6 +7,10 @@
 * [NEXT STOP — OIDC](https://medium.com/@Shaaali/next-stop-oidc-c4c8f9e0cf45) by [Shalitha Pathiranage](https://medium.com/@Shaaali)
 * [How to implement plugin support for a Java Application : Part 1](https://mashkarharis.medium.com/how-to-implement-plugin-support-for-a-java-application-part-1-a200c2265289) by [M Ashkar Haris](https://mashkarharis.medium.com/)
 * [How to implement plugin support for a Java Application : Part 2](https://mashkarharis.medium.com/how-to-implement-plugin-support-for-a-java-application-part-2-da4189e28c83) by [M Ashkar Haris](https://mashkarharis.medium.com/)
+* [Issue user credentials using Auth0 and MATTR](https://medium.com/@NimashaBandara/issue-user-credentials-using-auth0-and-mattr-69685e13dda4) by [Nimasha Bandara](https://medium.com/@NimashaBandara)
+* [A turning point called Blockchain](https://medium.com/@NimashaBandara/a-turning-point-called-blockchain-97c0d588574) by [Nimasha Bandara](https://medium.com/@NimashaBandara)
+* [Take a look at Past, Present and Future of the web](https://medium.com/@NimashaBandara/take-a-look-at-past-present-and-future-of-the-web-bde75a078dd1) by [Nimasha Bandara](https://medium.com/@NimashaBandara)
+* [The new era of web — web 3.0](https://medium.com/@NimashaBandara/the-new-era-of-web-web-3-0-3455519b6136) by [Nimasha Bandara](https://medium.com/@NimashaBandara)
 
 ## February (22)
 * [Verifiable Credentials to build trust in Digital Identities](https://minoli-desilva.medium.com/verifiable-credentials-to-build-trust-in-digital-identities-c3797e0ddace) by [Minoli De Silva](https://minoli-desilva.medium.com/)
